--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ bcrypt==3.2.0
 cffi==1.14.2
 click==7.1.2
 Flask==1.1.2
+Flask-Bcrypt==0.7.1
+Flask-Login==0.5.0
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.3
 gunicorn==20.0.4
