use black formatter
- Run black . to format the current code with black

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,40 @@
 bcrypt==3.2.0
+black==21.8b0
+bleach==4.1.0
+certifi==2020.12.5
 cffi==1.14.5
+chardet==4.0.0
 click==8.0.1
+colorclass==2.2.0
 dnspython==2.1.0
+docopt==0.6.2
 email-validator==1.1.2
 Flask==2.0.1
 Flask-Bcrypt==0.7.1
 Flask-Login==0.5.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
+greenlet==1.1.0
 gunicorn==20.1.0
 idna==3.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
+mypy-extensions==0.4.3
+packaging==20.9
+pathspec==0.9.0
+pip-upgrader==1.4.15
+platformdirs==2.3.0
 pycparser==2.20
+pyparsing==2.4.7
+regex==2021.8.28
+requests==2.25.1
 six==1.16.0
 SQLAlchemy==1.4.16
+terminaltables==3.1.0
+tomli==1.2.1
+typing-extensions==3.10.0.2
+urllib3==1.26.5
+webencodings==0.5.1
 Werkzeug==2.0.1
 WTForms==2.3.3
